--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,10 @@ go:
   - 1.11.x
   - 1.12.x
   - 1.13.x
+
+before_install:
+  - go get github.com/mattn/goveralls
+
+script:
+  - go test -v -covermode=count -coverprofile=coverage.out
+  - goveralls -coverprofile=coverage.out -service=travis-ci
